Sig-store implementation

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-architects/ngrx-toolkit": "^0.4.0",
     "@angular/animations": "18.0.2",
     "@angular/cdk": "16.0.3",
     "@angular/common": "18.0.2",
@@ -22,12 +23,14 @@
     "@angular/platform-browser": "18.0.2",
     "@angular/platform-browser-dynamic": "18.0.2",
     "@angular/router": "18.0.2",
+    "@ngrx/component": "^17.2.0",
     "@ngrx/component-store": "16.0.1",
-    "@ngrx/effects": "^16.0.1",
+    "@ngrx/effects": "^17.2.0",
     "@ngrx/entity": "16.0.1",
     "@ngrx/router-store": "16.0.1",
     "@ngrx/signals": "^17.2.0",
-    "@ngrx/store": "^16.0.1",
+    "@ngrx/store": "^17.2.0",
+    "ngx-infinite-scroll": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.7"
